resolve left button align

--- a/style/style-cc.css
+++ b/style/style-cc.css
@@ -455,7 +455,7 @@ picture {
     .basis60,
     .basis80 {
         flex-basis: 100%;
-        margin: 0 auto;
+        /* margin: 0 auto; */
         max-width: 30em;
     }
 
@@ -1385,6 +1385,7 @@ footer img {
     .no-padding-right-on-mobile {
         padding-right: 0;
     }
+
     h3.call-out-text {
         font-size: 2rem !important;
     }
@@ -1420,4 +1421,10 @@ footer img {
 
 .align-center {
     align-items: center
+}
+
+@media(max-width:54em) {
+    .mobile-align-start {
+        align-items: flex-start;
+    }
 }
